# pam-vncpasswd

./: .gitignore  CMakeLists.txt  LICENSE  pam-vncpasswd.spec
docs/: CMakeLists.txt  README.md  fnal-vncpasswd.1.adoc  pam_fnal_vncpasswd.8.adoc  pam_vncpasswd.8.adoc
dot_github/workflows/: ci.yaml  codeql.yaml
examples/: vncserver-virtual
src/: CMakeLists.txt  autoconf.h.in  pam_entry.c  pam_fnal_vncpasswd.c  pam_fnal_vncpasswd.h  pam_vncpasswd.c  pam_vncpasswd.h  syscall_ops.h  syscall_ops_default.c  vncpasswd.c
src/fnal-vncpasswd/: CMakeLists.txt  main.c  passwd.c  passwd.h  vncpasswd.c  vncpasswd_io.h
src/pam/: CMakeLists.txt  auth.c  auth.h  pam_entry.c
src/shared/: CMakeLists.txt  syscall_ops.h  syscall_ops_default.c  vnc_crypto.h  vnc_path.c  vnc_path.h
test/: CMakeLists.txt  test_framework.h  test_pam_fnal_vncpasswd.c  test_pam_vncpasswd.c  test_vncpasswd.c
